# chess_ai

./: .gitignore  GUI.py  Makefile  README.md  chess.py  game_scene.py  game_scene_ava.py  game_scene_avc.py  game_scene_cvc.py  game_scene_pvc.py  game_scene_pvc2.py  game_scene_pvp.py  init.py  pyproject.toml  save.py  test.py  train.py  train_bp.py  train_bp_minimax.py  train_ga_minimax.py  utils.py
model/00/: info.txt  weights.h5
model/01/: info.txt  weights.h5
model/02/: info.txt  weights.h5
model/03/: info.txt  weights.h5
model/04/: info.txt  weights.h5
model/05/: info.txt  weights.h5
model/06/: info.txt  weights.h5
model/07/: info.txt  weights.h5
model/08/: info.txt  weights.h5
model/09/: info.txt  weights.h5
model/10/: info.txt  weights.h5
model/11/: info.txt  weights.h5
model/12/: info.txt  weights.h5
model/13/: info.txt  weights.h5
model/14/: info.txt  weights.h5
model/15/: info.txt  weights.h5
model/16/: info.txt  weights.h5
model/17/: info.txt  weights.h5
model/18/: info.txt  weights.h5
model/19/: info.txt  weights.h5
model/G_00/: saved_model.pb
model/G_01/: fingerprint.pb  saved_model.pb
model/G_03/: saved_model.pb
model/G_04/: info.txt  saved_model.pb
model/G_07/: info.txt
model/G_09/: fingerprint.pb
model/test/: fingerprint.pb  saved_model.pb
nparrays/: 435.npy
nparrays/D2_470592/: target.npy
nparrays/D2_471876/: target.npy
nparrays/D2_80300576/: target.npy
scenes/: game_scene_ava.py  game_scene_avc.py  game_scene_cvc.py  game_scene_pva.py  game_scene_pvc.py  game_scene_pvc2.py  game_scene_pvp.py
(+497 files in other folders)
